--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.9",
     "ip": "^1.1.8",
     "ip-location": "^1.0.1",
     "nodemon": "^3.0.2"
